--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: PT Sans Narrow, Arial, Serif;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
 	font-size: 14px;
 	line-height: 24px;
 	font-weight: bold;
@@ -12,5 +12,5 @@ h1{
 .main-navigation {
 	font-size: 16px;
 	line-height: 20px;
-	color: #ffffff;
+	color: #fff;
 }
