--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 body {
 	/*background: url("/img/_barbershop-index.jpg") no-repeat 50% 0;
 	background-size: 2560px auto;*/
-	/*background: url("/img/_barbershop-shop.jpg") no-repeat 50% 0;
+	background: url("/img/_barbershop-shop.jpg") no-repeat 50% 0;
 	background-size: 1200px auto;*/
 	/*background: url("/img/_barbershop-item.jpg") no-repeat 50% 0;
 	background-size: 1200px auto;*/
@@ -23,18 +23,18 @@ body {
 	min-height: 72px;
 }
 .main-navigation {
-	font-size: 16px;
 	line-height: 20px;
 	width: 640px;
 	float: left;
 	min-height: 72px;
 }
 .main-navigation ul {
-	
+	font-size: 0;
 }
 .main-navigation li {
 	display: inline-block;
 	vertical-align: middle;
+	font-size: 16px;
 }
 .logo-block {
 	float: left;
@@ -66,11 +66,13 @@ h1{
 }
 .breadcrumbs {
 	padding-left: 0;
+	font-size: 0;
 }
 .breadcrumbs li {
 	display: inline-block;
 	vertical-align: top;
 	text-transform: uppercase;	
+	font-size: 14px;
 }
 
 /* footer */
@@ -136,22 +138,24 @@ h1{
 /* для catalog.html */
 .catalog-box {
 	margin-bottom: 49px;
+	margin-top: 52px;
 }
 .select {
 	float: left;
 	width: 220px;
 	min-height: 680px;
 }
-.catalog {
+.catalog-wrapper {
 	float: right;
 	width: 720px;
+}
+.catalog {
 	font-size: 0;
 	min-height: 620px;
 	margin-bottom: 17px
 }
-.select, 
-.catalog {
-	margin-top: 38px;
+.pagination {
+	min-height: 43px;
 }
 .catalog-item {
 	margin-left: 20px;
@@ -164,11 +168,7 @@ h1{
 .catalog-item p {
 	margin: 0;
 }
-.pagination {
-	float: right;
-	min-height: 43px;
-	width: 720px;
-}
+
 
 /* для catalog-item.html */
 .item-box {
@@ -195,10 +195,14 @@ h1{
 .item-article {
 	float: right;
 }
+.price-buy {
+	font-size: 0;
+}
 .price-buy p,
 .price-buy a {
 	display: inline-block;
 	vertical-align: middle;
+	font-size: 14px;
 }
 .gallery-list {
 	padding: 0;
@@ -238,11 +242,16 @@ h1{
 	clear: both;
 	text-transform: uppercase;
 	margin-bottom: 62px;
+	font-size: 0;
+}
+.about-us h2 {
+	font-size: 24px;
 }
 .about-us p {
 	display: inline-block;
 	vertical-align: top;
 	width: 380px;
+	font-size: 14px;
 }
 .about-us p:first-of-type {
 	margin-right: 100px;
