Декторативные элементы index

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 body {
 	/*background: url("../img/_barbershop-index.jpg") no-repeat 50% 0;
 	background-size: 2560px auto;*/
-	/*background: url("../img/_barbershop-shop.jpg") no-repeat 50% 0;
+	background: url("../img/_barbershop-shop.jpg") no-repeat 50% 0;
 	background-size: 1200px auto;*/
 	/*background: url("../img/_barbershop-item.jpg") no-repeat 50% 0;
 	background-size: 1200px auto;*/
@@ -46,6 +46,7 @@ body {
 	padding: 0;
 }
 .main-navigation li {
+	position: relative;
 	display: inline-block;
 	vertical-align: middle;
 }
@@ -80,6 +81,15 @@ body {
 .login:hover::before {
 	opacity: 1;
 }
+.active-link::after {
+	content: "";
+	position: absolute;
+	display: block;
+	height: 4px;
+	width: 100%;
+	background: #fff;
+	bottom: 0;
+}
 
 /* общие */
 .clearfix:after {
@@ -103,33 +113,102 @@ h1{
 	font-size: 0;
 }
 .breadcrumbs li {
+	position: relative;
 	display: inline-block;
 	vertical-align: top;
-	text-transform: uppercase;	
 	font-size: 14px;
+	padding-right: 40px;
+}
+.breadcrumbs li::after {
+	content: "";
+	position: absolute;
+	display: block;
+	width: 7px;
+	height: 7px;
+	top: 6px;
+	right: 15px;
+	background: #000;
+	transform: rotate(45deg);
+}
+.breadcrumbs a {
+	text-decoration: none;
 }
 
 /* footer */
 .main-footer {
-	clear: both;
-	min-height: 189px;
+  margin-top: 65px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  color: #fff; 
+  background: #252525 url("../img/footer-tint.jpg");
 }
 .footer-contacts {
-	float: left;
-	width: 400px;
+  float: left;
+  width: 320px;
+  margin-right: 60px;
+}
+.footer-contacts a {
+  color: #fff;
+}
+.footer-contacts a:hover {
+  text-decoration: none;
 }
 .footer-social {
-	width: 140px;
-	float: left;
+  float: left;
+  width: 180px;
+  text-align: center;
 }
 .footer-copyright {
-	float: right;
-	width: 140px;
+  float: right;
+  max-width: 180px;
+}
+.footer-social p {
+  margin: 0;
+  margin-bottom: 15px;
+}
+.social-btn {
+  display: inline-block;
+  width: 43px;
+  height: 43px;
+  margin: 0 2px;
+  font-size: 0;
+  vertical-align: top;
+  text-decoration: none;
+}
+.social-btn-vk {
+  background: #000 url("../img/icon-vk.png") no-repeat center;
+}
+.social-btn-fb {
+  background: #000 url("../img/icon-fb.png") no-repeat center;
+}
+.social-btn-inst {
+  background: #000 url("../img/icon-inst.png") no-repeat center;
+}
+.social-btn-vk:hover {
+  background: #fff url("../img/icon-vk-black.png") no-repeat center;
+}
+.social-btn-fb:hover {
+  background: #fff url("../img/icon-fb-black.png") no-repeat center;
+}
+.social-btn-inst:hover {
+  background: #fff url("../img/icon-inst-black.png") no-repeat center;
+}
+.footer-copyright p {
+  margin: 0;
+  margin-bottom: 15px;
+  text-align: center;
+}
+.footer-copyright .btn {
+  margin-right: 0;
+}
+.footer-copyright .btn:hover {
+  color: #000;
+  background-color: #fff;
 }
 
 /* для index.html */
 .index-background {
-	background: #000;
+	background: #000 url("../img/bg-tint.jpg") no-repeat 50% 72px;
 }
 .index-logo {
 	width: 368px;
@@ -139,7 +218,7 @@ h1{
 }
 .features {
 	margin-top: 20px;
-  margin-bottom: 72px;
+  margin-bottom: 63px;
 }
 .features-item {
   float: left;
@@ -166,7 +245,7 @@ h1{
 	display: block;
 	width: 20px;
 	height: 20px;
-	bottom: 0;
+	bottom: 3px;
 	left: 50%;
 	margin-left: -10px;
 	background: #fff;
@@ -179,24 +258,122 @@ h1{
 }
 .index-content {
   margin-bottom: 35px;
-  padding-top: 50px;
+  padding-top: 45px;
 	padding-left: 80px;
 	padding-right: 80px;
-	min-height: 369px;
+	padding-bottom: 50px;
+	background: 
+		url("../img/border.png") no-repeat 50% 50%,
+		url("../img/index-content-background.jpg") no-repeat 0 0;
+	background-color: #f5f2ef;
 }
 .index-content:last-child {
-	min-height: 346px;
 	margin-bottom: 65px;
 }
 .index-content-left {
   float: left;
   width: 380px;
-  min-height: 330px;
 }
 .index-content-right {
   float: right;
   width: 300px;
-  min-height: 330px;
+}
+.index-content-title {
+	margin: 0;
+	margin-bottom: 20px;
+	font-size: 30px;
+	line-height: 42px;
+}
+.news-preview {
+	list-style: none;
+	padding: 0;
+}
+.news-preview li {
+	margin-top: 20px;
+}
+.index-content p {
+	padding: 0;
+	margin-bottom: 21px;
+}
+.news-preview p {
+	margin-bottom: 0
+}
+.news-preview time {
+	text-transform: uppercase;
+}
+.gallery {
+	position: relative;
+	margin-top: 22px;
+	min-height: 260px;
+}
+.gallery-content {
+	margin: 0;	
+	text-align: center;
+	padding-top: 7px;
+	background: #fff;
+}
+..gallery-content img {
+	width: 286px;
+	height: 164px;
+}
+.btn {
+  display: inline-block;
+  padding: 10px 0px;
+	width: 140px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  vertical-align: top;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: #000000;
+	margin-right: 17px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.btn:hover,
+.btn:active {
+  background-color: #663d15;
+}
+.gallery .btn {
+	position: absolute;
+	bottom: 0;
+	margin: 0;
+}
+.gallery-prev {
+  left: 0;
+}
+.gallery-next {
+  right: 0px;
+}
+.appointment-form input {
+  float: left;
+  width: 106px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 7px 15px;
+  font-size: 14px;
+  line-height: 24px;
+  font-family: "PT Sans Narrow", "Arial", sans-serif;
+  color: #000000;
+  text-transform: uppercase;
+  background-color: #f9f6f3;
+  border: 2px solid #000000;
+  outline: none;
+}
+.appointment-form input:focus {
+  border: 2px solid #663d15;
+}
+.appointment-form input:nth-child(2n) {
+  margin-right: 0;
+}
+.appointment-form .btn {
+  clear: both;
+  width: 100%;
 }
 
 /* для catalog.html */
@@ -239,7 +416,7 @@ h1{
 	margin-top: 53px;
 	margin-bottom: 36px;
 }
-.gallery {
+.catalog-item-gallery {
 	float: left;
 	width: 460px;	
 }
