--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,13 @@ body {
 .index-background {
 	background: #000 url("../img/bg-tint.jpg") no-repeat 50% 72px;
 }
-/*.inner-page {
+.inner-page {
 	background: #f8f5f2 url("../img/inner-page-background.jpg");
-}*/
+}
 body {
 	/*background: url("../img/_barbershop-index.jpg") no-repeat 50% 0;
 	background-size: 2560px auto;*/
-	background: url("../img/_barbershop-shop.jpg") no-repeat 50% 0;
+	/*background: url("../img/_barbershop-shop.jpg") no-repeat 50% 0;
 	background-size: 1200px auto;*/
 	/*background: url("../img/_barbershop-item.jpg") no-repeat 50% 0;
 	background-size: 1200px auto;*/
@@ -126,7 +126,9 @@ h1{
 	font-size: 14px;
 	padding-right: 40px;
 }
-.breadcrumbs li::after {
+.breadcrumbs li::after,
+.set-comp li::after,
+.best-resource li::after {
 	content: "";
 	position: absolute;
 	display: block;
@@ -139,6 +141,9 @@ h1{
 }
 .breadcrumbs li:last-child::after {
 	display: none;
+}
+.breadcrumbs li:last-child {
+	color: #aba9a7;
 }
 .breadcrumbs a {
 	color: #000;
@@ -389,13 +394,73 @@ h1{
 
 /* для catalog.html */
 .catalog-box {
-	margin-bottom: 53px;
+	margin-bottom: 48px;
 	margin-top: 48px;
 }
 .select {
 	float: left;
 	width: 210px;
 	min-height: 680px;
+}
+.care-form fieldset {
+	border: none;
+	margin: 0;
+	margin-bottom: 33px;
+	padding: 0;
+}
+.care-form legend {
+	font-size: 24px;
+	line-height: 30px;
+	margin-bottom: 26px;
+}
+.care-form label {
+	display: block;
+	position: relative;
+	line-height: 18px;
+	margin-bottom: 19px;
+	padding-left: 42px;
+}
+.care-form input {
+	display: none;
+}
+.care-form input[type="checkbox"] + .checkbox-indicator,
+.care-form input[type="radio"] + .radio-indicator {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 17px;
+	height: 17px;
+	border: 2px solid #000000;
+}
+.care-form input[type="radio"] + .radio-indicator {
+	border-radius: 50%;
+}
+.care-form input[type="checkbox"]:checked + .checkbox-indicator::before,
+.care-form input[type="checkbox"]:checked + .checkbox-indicator::after {
+	content: "";
+	position: absolute;
+	top: 8px;
+	left: 1px;
+	width: 15px;
+	height: 2px;
+	background-color: #000;
+}
+.care-form input[type="radio"]:checked + .radio-indicator::before {
+	content: "";
+	position: absolute;
+	top: 4.5px;
+	left: 4.5px;
+	width: 7px;
+	height: 7px;
+	border: 1px solid #000;
+	border-radius: 50%;
+	background-color: #000;
+}
+.care-form input[type="checkbox"]:checked + .checkbox-indicator::before {
+	transform: rotate(45deg);
+}
+.care-form input[type="checkbox"]:checked + .checkbox-indicator::after {
+	transform: rotate(-45deg);
 }
 .catalog-wrapper {
 	float: right;
@@ -406,9 +471,6 @@ h1{
 	font-size: 0;
 	min-height: 620px;
 	margin-bottom: 17px
-}
-.pagination {
-	min-height: 43px;
 }
 .catalog-item img {
 	width: 220px;
@@ -422,6 +484,8 @@ h1{
 	min-height: 286px;
 	margin-bottom: 20px;
 	max-width: 220px;
+	background: #fff;
+	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 .catalog-item-box {
 	padding: 5px 15px;
@@ -432,41 +496,60 @@ h1{
 	text-decoration: none;
 	color: #000;
 }
-.catalog-buy .btn,
-.catalog-buy p{
-	display: inline-block;
+.catalog-buy {
+	margin-top: 14px;
+	font-size: 0px;
 }
-.catalog-item .btn {
+.catalog-buy .btn,
+.catalog-buy p,
+.price-buy p,   /* для catalog-item.html */
+.price-buy .btn {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 14px;
+	line-height: 18px;
+	margin: 0;
 	text-transform: uppercase;
+}
+.catalog-buy p,
+.price-buy p /* для catalog-item.html */ {
+	width: 107px;
+	padding: 13px 0;
+	padding-left: 3px;
+	text-align: center;
+	background: #e5e5e5;
+}
+.catalog-item .btn,
+.price-buy .btn /* для catalog-item.html */ {
 	color: #fff;
 	width: auto;
-	padding: 12px 19px;
+	padding: 13px 19px;
 }
 .item-brand {
 	text-transform: uppercase;
 }
-.care-form fieldset {
-	border: none;
-	margin: 0;
-	margin-bottom: 32px;
-	padding: 0;
+.pagination {
+	min-height: 43px;
+	padding-left: 20px;
 }
-.care-form label {
-	display: block;
-	line-height: 18px;
-	margin-bottom: 19px;
-	padding-left: 42px;
+.pagin-btn {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 14px;
+	font-weight: bold;
+	color: #fff;
+	text-decoration: none;
+	width: 43px;
+	height: 29px;
+	padding: 7px 0; 
+	text-align: center;
+	margin-right: 4px;
+	background: #000;
 }
-.care-form input {
-	display: none;
+.active-btn {
+	background: #fff;
+	color: #000;
 }
-.care-form legend {
-	font-size: 24px;
-	line-height: 30px;
-	margin-bottom: 26px;
-}
-
-
 
 /* для catalog-item.html */
 .item-box {
@@ -492,16 +575,31 @@ h1{
 }
 .item-article {
 	float: right;
+	color: #aeaeae;
 }
 .price-buy {
 	font-size: 0;
+	margin-top: 36px;
 }
-.price-buy p,
-.price-buy a {
-	display: inline-block;
-	vertical-align: middle;
-	font-size: 14px;
+.desc h2 {
+	margin-top: 62px;
+	font-size: 24px;
+	line-height: 30px;
 }
+.set-comp {
+	list-style: none;
+	padding: 0;
+	margin-top: 26px;
+}
+.set-comp li {
+	position: relative;
+	padding-left: 20px;
+}
+.set-comp li::after {
+	top: 9px;
+	left: 3px;
+}
+
 .gallery-list {
 	padding: 0;
 	margin: 0;
@@ -530,11 +628,73 @@ h1{
 .price-list {
 	float: right;
 }
+.big-heading {
+	margin-top: 55px;
+	margin-bottom: 65px;
+	text-align: center;
+}
+.big-heading h2 {
+	position: relative;
+	z-index: 2;
+	display: inline-block;
+	margin: 0;
+	padding: 0 25px;
+	font-size: 48px;
+	line-height: 48px;
+	text-align: center;
+	background: #f8f3f0 url("../img/pattern-white.jpg") repeat;
+}
+.big-heading::after {
+	content: "";
+	position: relative;
+	top: -25px;
+	z-index: 1;
+	display: block;
+	border-bottom: 2px solid #000000;
+}
 .best-resource,
 .price-list{
 	min-height: 270px;
 	width: 460px;
 	margin-bottom: 25px;
+}
+.best-resource h2,
+.price-list h2 {
+	margin: 0;
+	margin-top: 15px;
+	width: 240px;
+	font-size: 24px;
+	line-height: 30px;
+}
+.price-list h2 {
+	width: 200px;
+}
+.best-resource ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	margin-top: 25px;
+}
+.best-resource li {
+	position: relative;
+	margin-bottom: 13px;
+	padding-left: 20px;
+}
+.best-resource li::after {
+	top: 7px;
+	left: 2px;
+}
+.price-list table {
+	border-collapse: collapse;
+	margin-top: 30px;
+}
+.price-list td {
+	border: 2px solid #000;
+	padding: 8px 15px;
+	width: 230px;
+}
+.price-list td:last-child {
+	text-align: center;
 }
 .about-us {
 	clear: both;
@@ -544,13 +704,14 @@ h1{
 }
 .about-us h2 {
 	font-size: 24px;
+	margin-bottom: 18px;
 }
 .about-us p {
 	display: inline-block;
 	vertical-align: top;
-	width: 380px;
+	width: 385px;
 	font-size: 14px;
 }
 .about-us p:first-of-type {
-	margin-right: 100px;
+	margin-right: 95px;
 }
